fixed overlapping

--- a/src/Components/PhotoGallery.css
+++ b/src/Components/PhotoGallery.css
@@ -15,6 +15,8 @@
     background-color: black;
     background-repeat:no-repeat;
     background-size: contain;
+    position: relative;
+    z-index: 0;
 }
 
 .RightButton, .LeftButton {
@@ -36,6 +38,7 @@
 }
 
 .ArrowImage {
-    
+    position: relative;
+    z-index: 1;
     transform: scale(5);
 }
