--- a/src/Components/Project.css
+++ b/src/Components/Project.css
@@ -35,6 +35,7 @@
     font-family: 'Syne';
     margin-top: 1vh;
     margin-bottom: 1vh;
+    cursor: default;
 }
 
 .TitleText { 
@@ -46,6 +47,7 @@
     grid-area: description;
     font-size: 32px;
     font-family:'Inter';
+    cursor: default;
 }
 
 iframe {
