--- a/src/Components/SideNavbar.css
+++ b/src/Components/SideNavbar.css
@@ -3,12 +3,14 @@
     right: 0;
     background-color: rgba(0, 0, 0, 0);
     height: calc(100vh - 50px - 75px); /* full screen height minus navbar height minus footer height */
-    width: 5vw;
+    width: 10vw;
     margin-top: 50px;
+    z-index: 99999;
 }
 
 .OpenIcon, .CloseIcon {
     color: white;
+    cursor: pointer;
 }
 
 .OpenIcon {
@@ -16,12 +18,39 @@
 }
 
 .CloseIcon {
+    margin-top: 15px;
     transform: rotateY(180deg) scale(2);
+}
+
+.IconOpener {
+    margin-top: 15px;
 }
 
 .ExpandedNavbar {
     background-color: aquamarine;
     height: 100%;
     width: 100%;
-    z-index: 99999;
+    display: flex;
+}
+
+.ItemsList {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.ItemsList a {
+    padding: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-top: 3px;
+    color: black;
+    text-decoration: none;
+    width: 100%;
+    height: 100%;
+}
+
+.ItemsList a:hover {
+    background-color: aqua;
 }
